# rust_oop_mro

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml
oop_mro/: Cargo.toml
oop_mro/src/: lib.rs
oop_mro/tests/: basic.rs  trybuild.rs
oop_mro/tests/trybuild/: fail_abstract_default.rs  fail_abstract_default.stderr  fail_abstract_method_with_body.rs  fail_abstract_method_with_body.stderr  fail_abstract_signature_mismatch.rs  fail_abstract_signature_mismatch.stderr  fail_ambiguous_base_trait_bound.stderr  fail_ambiguous_owned_via_type.stderr  fail_ambiguous_via_type.stderr  fail_as_base_ambiguous.rs  fail_as_base_ambiguous.stderr  fail_as_base_ambiguous_generic_same_specialization.rs  fail_as_base_ambiguous_generic_same_specialization.stderr  fail_as_base_wrong_generic_target.rs  fail_as_base_wrong_generic_target.stderr  fail_associated_type.rs  fail_associated_type.stderr  fail_base_cast_trait_name_collision.rs  fail_base_cast_trait_name_collision.stderr  fail_base_cast_unrelated.rs  fail_base_cast_unrelated.stderr  fail_concrete_inherits_abstract.rs  fail_concrete_inherits_abstract.stderr  fail_concrete_unimplemented.rs  fail_concrete_unimplemented.stderr  fail_constructor_indirect_base.rs  fail_constructor_indirect_base.stderr  fail_cycle.rs  fail_cycle.stderr  fail_downcast_cross_cast.rs  fail_downcast_cross_cast.stderr  (+55 more)
oop_mro_examples/: Cargo.toml
oop_mro_examples/src/: main.rs
oop_mro_macros/: Cargo.toml
oop_mro_macros/src/: ast.rs  attrs.rs  c3.rs  generics.rs  lib.rs  model.rs  names.rs  rewrite.rs  types.rs  validate.rs
(+9 files in other folders)
